# arpentry

./: .clang-format  CLAUDE.md  CMakeLists.txt  CONTROL.md  CONTROL_SPECIFICATION.md  DESIGN.md  FORMAT.md  LICENSE  README.md  STYLE.md  VIEWER.md  spec.md  style.json
.github/workflows/: ci.yml
client/: CMakeLists.txt  README.md
client/shaders/: highway.wgsl  poi.wgsl  surface.wgsl  terrain.wgsl  tree.wgsl  ui.wgsl  wireframe.wgsl
client/src/: camera.c  camera.h  control.c  control.h  font.c  font.h  http.c  http.h  main.c  renderer.c  renderer.h  screenshot.c  screenshot.h  stb_truetype_impl.c  style.c  style.h  tile_decode.c  tile_decode.h  tile_fetch.c  tile_fetch.h  tile_manager.c  tile_manager.h  tile_prepare.c  tile_prepare.h  tile_visible.c  ui.c  ui.h
client/src/pipeline/: core.c  extrusion.c  instance.c  internal.h  label.c  mesh.c  placeholder.c  texture.c
client/src/tile/: decode.c  fetch.c  manager.c  prepare.c  prepare.h  visible.c
client/tests/: demo_tile.c  test_brotli.c  test_flatbuf.c  test_tile_fetch.c
client/web/: shell.html
cmake/: embed_binary.cmake  embed_shader.cmake
common/: CMakeLists.txt
common/include/arpentry/: common.h  tile_io.h
common/src/: buf.c  buf.h  common.c  coords.c  coords.h  globe.c  globe.h  hashmap.c  hashmap.h  math3d.h  tile.c  tile.h  tile_io.c
common/tests/: test_brotli.c  test_camera.c  test_common.c  test_flatbuf.c  test_globe.c  test_math3d.c  test_tile.c  test_tile_decode.c  test_tile_manager.c
docs/: CONTROL.md  DESIGN.md  FORMAT.md  MOTIVATION.md  STYLE.md  VIEWER.md
schemas/: example.fbs  model.fbs  style.fbs  tile.fbs  tileset.fbs
scripts/: clean.sh  run-native.sh  run-web.sh  setup-web.sh  test.sh
server/: CMakeLists.txt
server/src/: demo_tile.c  demo_tile.h  http.c  http.h  main.c  net.c  net.h  noise.c  noise.h  openssl.h  terrain_gen.c  terrain_gen.h  tile_path.c  tile_path.h  tls.c  tls.h  uring.h  util.h  xmalloc.h
server/tests/: mock_net.c  test_http.c  test_server.c  test_terrain_gen.c
